# PDFTag

./: .gitignore  CMakeLists.txt  README.md  main.cc
res/: PdfTag_GtkGui.glade  PdfTag_GtkGui.glade~  icon.xcf
src/: AppSettings.cc  AppSettings.h  Logging.h  PdfFile.cc  PdfFile.h  Util.cc  Util.h  main.cc
